styled newsletter block and corrected white space

--- a/styles/components/form.css
+++ b/styles/components/form.css
@@ -6,7 +6,7 @@
 }
 
 .input-element {
-  width: 25rem;
+  width: 13rem;
   padding: 1.2rem;
   border-radius: 15px 0 0 15px;
   background-color: #ddd;
